--- a/site/channels.html
+++ b/site/channels.html
@@ -255,7 +255,7 @@ Here's one possible interleaving that causes a deadlock.</p>
 <tbody>
 <tr>
 <td>sit in <em>chan1</em></td>
-<td>sit <em>chan2</em></td>
+<td>sit in <em>chan2</em></td>
 </tr>
 <tr>
 <td>say <code>HI</code> on <em>chan2</em></td>
