--- a/site/channels.html
+++ b/site/channels.html
@@ -401,9 +401,9 @@ cause another deadlock, where now instead of blocking each other on
 reading a pipe, threads could block each other acquiring a lock on each
 others' mutexes. The trick to avoiding this is always lock the mutexes in
 the same order. In particular, this means that if a thread's mutex comes
-<em>before</em> the mutex of the thread it is trying to visit, it must first
-<em>unlock</em> its mutex, the re-lock, and only then acquire a lock on the other
-mutex. The tiny gap left between the unlock and re-lock prevents the
+<em>after</em> the mutex of the thread it is trying to visit, it must first
+<em>unlock</em> its mutex, then acquire a lock on the other mutex, and then re-lock
+its mutex. The initial unlocking of the thread's mutex prevents the
 deadlock.</p>
 <p>Once a visiting thread has acquired the two locks, it examines the
 <code>state</code> field of the other thread's <code>SelectorFulfillment</code>. If the <code>state</code>
