--- a/site/india2.html
+++ b/site/india2.html
@@ -198,7 +198,7 @@ oil.
 him off-putting in a subtle way.  There was a rote thinness to his
 presentation, and he more often deflected questions than answered them.  Andrea
 suggested that he was acting like a salesman who isn't selling anything.  I
-thought that he was crushed my the monotony of saying the same things in the
+thought that he was crushed by the monotony of saying the same things in the
 same way in the same places nearly every day for years and years.  Sometimes,
 after an energetic monologue, he would turn away and sigh.</p>
 <p>The fort palace has three notable sections.  The first is the courtyard where
@@ -320,8 +320,8 @@ but we wouldn't take pictures inside.  Nearby, there was this:</p>
 <p><img alt="" src="../site/india2_154_small.jpg" /></p>
 <p>I forget what it is, but it looks cool.</p>
 <p>We were thoroughly pooped when we returned to the hotel late that afternoon.
-They also moved us into a room with two proper beds, so Andrea could vacate
-her stay on the cot from the previous night.</p>
+They also moved us into a room with two proper beds, so Andrea could end her
+stay on the cot from the previous night.</p>
 <p>Today is a down day.  We might do something this afternoon, and we might not.
 There is a nice pool.  Tonight is a cooking class.
 <img src="../site/hindi.png" style="width: 200px;" /></p>
