generalize thumbnail protocol

--- a/site/india1.html
+++ b/site/india1.html
@@ -14,6 +14,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  
+  <script src="../site/linkify.js"> </script>
+
   <title>India, Day 1</title>
 </head>
 
@@ -41,11 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_1">India, Day 1</a></li></ul></div>
 
 <h1 id="india_day_1">India, Day 1</h1>
-<style>
-img {
-    width: 700px;
-}
-</style><script src="../site/linkify.js"> </script><p><img alt="dog" src="../site/india_20_small.jpg" /></p>
+<p><img alt="dog" src="../site/india_20_small.jpg" /></p>
 <p>This is Aniruddha Ram Kumar Mukherjee.  He is a dog.  Like many natives of
 Delhi, Aniruddha must find ways to cope with the oppressive afternoon summer
 heat.  A quick nap on a bench can help pass by the hottest part of the day.</p>
