--- a/site/india2.html
+++ b/site/india2.html
@@ -14,6 +14,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  
+  <script src="../site/linkify.js"> </script>
+
   <title>India, Day 6</title>
 </head>
 
@@ -41,11 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_6">India, Day 6</a></li></ul></div>
 
 <h1 id="india_day_6">India, Day 6</h1>
-<style>
-img {
-    width: 700px;
-}
-</style><script src="../site/linkify.js"> </script><p><img alt="" src="../site/india2_38_small.jpg" /></p>
+<p><img alt="" src="../site/india2_38_small.jpg" /></p>
 <p>Copper (II) sulfate is the product of the reaction between copper metal and
 sulfuric acid.  It's water soluble and moderately toxic.</p>
 <p>Copper (II) oxide is the result of the breakdown of Copper (I) oxide in humid
