--- a/site/break-cycles.html
+++ b/site/break-cycles.html
@@ -14,6 +14,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  
+  <script src="../site/linkify.js"> </script>
+
   <title>Code Generation and the Minimum Feedback Arc Set</title>
 </head>
 
