--- a/site/callbacks.html
+++ b/site/callbacks.html
@@ -14,6 +14,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  
+  <script src="../site/linkify.js"> </script>
+
   <title>Callbacks (Part 1)</title>
 </head>
 
