--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -14,6 +14,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  
+  <script src="../site/linkify.js"> </script>
+
   <title>Llama JSON</title>
 </head>
 
