--- a/site/pedant-cheat-sheet.html
+++ b/site/pedant-cheat-sheet.html
@@ -14,6 +14,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  
+  <script src="../site/linkify.js"> </script>
+
   <title>Pedant Cheat Sheet</title>
 </head>
 
