--- a/site/posts.html
+++ b/site/posts.html
@@ -17,6 +17,9 @@
 
   <script>hljs.initHighlightingOnLoad();</script>
 
+  <!-- The space character prevents etree from omitting the closing tag. -->
+  <script src="../site/linkify.js"> </script>
+
   <title>Posts</title>
 </head>
 
