a few more points

--- a/site/india3.html
+++ b/site/india3.html
@@ -124,6 +124,9 @@ think I preferred the nuts.</li>
 </ul>
 <p><img alt="" src="../site/india3_25_small.jpg" /></p>
 <p><img alt="" src="../site/india3_23_small.jpg" /></p>
+<p>We began with another Sikh temple, and along the way there was a quiet street
+of Jain households.  After kulfi we rickshawed back to the car, where our guide
+seemed oddly interested in keeping far away from our driver.</p>
 <p>So ended the street food walking tour.</p>
 <p>On the way back, we stopped to get some cash for tipping Mr. Singh, as it would
 be our last drive with him.</p>
