--- a/site/india4.html
+++ b/site/india4.html
@@ -57,7 +57,9 @@ got a better view of what was going on.  Asha and Vineet were sitting on a
 bench opposite a small fire.  On the other side was a priest with a microphone.</p>
 <video controls="true" width="700">
   <source src="../site/havan.mp4" type="video/mp4" />
-</video><p>This ritual likely had a deep significance for a few attending, but not for the
+</video><p>I should mention that the wedding couple are not visible in the video (they're
+off to the left), and that the shaking due to coffee.</p>
+<p>This ritual likely had a deep significance for a few attending, but not for the
 bride or groom.</p>
 <p><img alt="" src="../site/india4_35_small.jpg" /></p>
 <p>At Indian weddings, women have <a href="https://en.wikipedia.org/wiki/Henna">henna</a> drawn on their bodies in a style
