--- a/site/india4.html
+++ b/site/india4.html
@@ -58,7 +58,7 @@ bench opposite a small fire.  On the other side was a priest with a microphone.<
 <video controls="true" width="700">
   <source src="../site/havan.mp4" type="video/mp4" />
 </video><p>I should mention that the wedding couple are not visible in the video (they're
-off to the left), and that the shaking due to coffee.</p>
+off to the left), and that the shaking image is due to coffee.</p>
 <p>This ritual likely had a deep significance for a few attending, but not for the
 bride or groom.</p>
 <p><img alt="" src="../site/india4_35_small.jpg" /></p>
