--- a/site/india4.html
+++ b/site/india4.html
@@ -74,9 +74,9 @@ as a pastry chef would.</p>
 <p><img alt="" src="../site/india4_8_small.jpg" /></p>
 <p>The women then are unable to use their hands for well over an hour.  It was
 hilarious.</p>
-<p>After drying and being scratched off onto a torn piece of newspaper, the
-stained skin starts to gradually darken from a iodine orange to a deep red
-brown.  Here's Andrea a day after:</p>
+<p>After the henna has dried and been scratched off onto a torn piece of
+newspaper, the stained skin starts to gradually darken from a iodine orange to
+a deep red brown.  Here's Andrea a day after:</p>
 <p><img alt="" src="../site/india4_37_small.jpg" /></p>
 <p><img alt="" src="../site/india4_38_small.jpg" /></p>
 <p>Speaking of Andrea, check her out.  She borrowed this <a href="https://en.wikipedia.org/wiki/Sari">sari (saree)</a> from
