--- a/site/india3.html
+++ b/site/india3.html
@@ -74,7 +74,7 @@ receivers.</p>
 <p>We got back to Delhi just in time, as my bladder was about to explode.
 They gave us a room with two beds.  They had guilty looks on their faces and
 upgraded us to a larger room, with a refrigerator.  Serves them right.  Finally
-somewhere to put the cheap champaign that Mr. Singh gifted us.</p>
+somewhere to put the cheap champagne that Mr. Singh gifted us.</p>
 <p>It's not really champaign in any sense of the word.  It's twelve percent
 alcohol by volume, is probably derived from grapes, and contains carbon
 dioxide, but aside from these things it more resembles fortified Kool-Aid.  I
