no such thing as a boat "driver"

--- a/site/india6.html
+++ b/site/india6.html
@@ -84,7 +84,7 @@ bicycles.  There are interesting flowers and critters everywhere.  It's quiet.</
 <p><img alt="" src="../site/india6_5_small.jpg" /></p>
 <p>There we boarded a big ol' houseboat just for us six and the three crew.</p>
 <p><img alt="" src="../site/india6_14_small.jpg" /></p>
-<p>There was a driver,</p>
+<p>There was a helmsman,</p>
 <p><img alt="" src="../site/india6_7_small.jpg" /></p>
 <p>a cook,</p>
 <p><img alt="" src="../site/india6_39_small.jpg" /></p>
