India posts navigation table

--- a/site/india3.html
+++ b/site/india3.html
@@ -132,7 +132,17 @@ seemed oddly interested in keeping far away from our driver.</p>
 be our last drive with him.</p>
 <p><img alt="" src="../site/india3_26_small.jpg" /></p>
 <p>Thanks for the jungle juice.</p>
-
+<table class="india">
+  <tr><th colspan="6">India</th></tr>
+  <tr>
+    <td><a href="../site/india1.html">Day 1</a></td>
+    <td><a href="../site/india2.html">Day 6</a></td>
+    <td>Day 8</td>
+    <td><a href="../site/india4.html">Day 10</a></td>
+    <td><a href="../site/india5.html">Day 13</a></td>
+    <td><a href="../site/india6.html">Day 15</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
