--- a/site/india4.html
+++ b/site/india4.html
@@ -115,7 +115,17 @@ this is trying to tell me.</p>
 rather early tomorrow for a flight to <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, where the second half of
 this trip begins.
 <img src="../site/hindi.png" style="width: 200px;" /></p>
-
+<table class="india">
+  <tr><th colspan="6">India</th></tr>
+  <tr>
+    <td><a href="../site/india1.html">Day 1</a></td>
+    <td><a href="../site/india2.html">Day 6</a></td>
+    <td><a href="../site/india3.html">Day 8</a></td>
+    <td>Day 10</td>
+    <td><a href="../site/india5.html">Day 13</a></td>
+    <td><a href="../site/india6.html">Day 15</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
