--- a/site/india1.html
+++ b/site/india1.html
@@ -166,7 +166,17 @@ are:</p>
 <p>At some point we ate dinner, and the food was delicious.  Now it is nearly one
 o'clock in the morning, and I am going to bed.</p>
 <p><img src="../site/hindi.png" style="width: 200px;" /></p>
-
+<table class="india">
+  <tr><th colspan="6">India</th></tr>
+  <tr>
+    <td>Day 1</td>
+    <td><a href="../site/india2.html">Day 6</a></td>
+    <td><a href="../site/india3.html">Day 8</a></td>
+    <td><a href="../site/india4.html">Day 10</a></td>
+    <td><a href="../site/india5.html">Day 13</a></td>
+    <td><a href="../site/india6.html">Day 15</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
