--- a/site/india2.html
+++ b/site/india2.html
@@ -324,7 +324,17 @@ stay on the cot from the previous night.</p>
 <p>Today is a down day.  We might do something this afternoon, and we might not.
 There is a nice pool.  Tonight is a cooking class.
 <img src="../site/hindi.png" style="width: 200px;" /></p>
-
+<table class="india">
+  <tr><th colspan="6">India</th></tr>
+  <tr>
+    <td><a href="../site/india1.html">Day 1</a></td>
+    <td>Day 6</td>
+    <td><a href="../site/india3.html">Day 8</a></td>
+    <td><a href="../site/india4.html">Day 10</a></td>
+    <td><a href="../site/india5.html">Day 13</a></td>
+    <td><a href="../site/india6.html">Day 15</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
