--- a/site/india6.html
+++ b/site/india6.html
@@ -180,7 +180,17 @@ night flights, people.</p>
 adjusting a few knobs:  fewer tours, more people;  less driving, more
 wandering;  less airport, more nature.</p>
 <p><img src="../site/hindi.png" style="width: 200px;" /></p>
-
+<table class="india">
+  <tr><th colspan="6">India</th></tr>
+  <tr>
+    <td><a href="../site/india1.html">Day 1</a></td>
+    <td><a href="../site/india2.html">Day 6</a></td>
+    <td><a href="../site/india3.html">Day 8</a></td>
+    <td><a href="../site/india4.html">Day 10</a></td>
+    <td><a href="../site/india5.html">Day 13</a></td>
+    <td>Day 15</td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
