Makefiles, David.  Makefiles.

--- a/site/india6.html
+++ b/site/india6.html
@@ -118,7 +118,7 @@ the crows.  I observed them from the upper deck until the Australians arose.</p>
 <p>Without a beast in sight for wrestling, more yoga was sought as a substitute.</p>
 <p><img alt="" src="../site/india6_29_small.jpg" /></p>
 <p>The rest of the morning was another leisurely cruise down the river, until we
-once again reached the shore and was picked up by our driver.</p>
+once again reached the shore and were picked up by our driver.</p>
 <p><img alt="" src="../site/india6_32_small.jpg" /></p>
 <p>It's a couple hours' drive back to Kochi, where the airport is, but we had more
 time to kill, so on our last day in Kerala we did some more sightseeing.  This
