add navigation links to 2016 Europe trip

--- a/site/europe1.html
+++ b/site/europe1.html
@@ -66,7 +66,17 @@ is a more expensive word for gasoline.</p>
 <p>For those of you stalking along at home, we are currently here:</p>
 <p><a href="https://www.google.is/maps/place/Reykjav%C3%ADk/@64.1369699,-21.8860857,11.43z/data=!4m5!3m4!1s0x48d674b9eedcedc3:0xec912ca230d26071!8m2!3d64.1265206!4d-21.8174393">https://www.google.is/maps/place/Reykjav%C3%ADk/@64.1369699,-21.8860857,11.43z/data=!4m5!3m4!1s0x48d674b9eedcedc3:0xec912ca230d26071!8m2!3d64.1265206!4d-21.8174393</a></p>
 <p>DNS insists on bringing me to Icelandic websites. Don’t they know who I am?</p>
-
+<table class="series">
+  <tr><th colspan="6">Europe</th></tr>
+  <tr>
+    <td>Day 1</td>
+    <td><a href="../site/europe2.html">Day 2</a></td>
+    <td><a href="../site/europe7.html">Day 7</a></td>
+    <td><a href="../site/europe8.html">Day 8</a></td>
+    <td><a href="../site/europe10.html">Day 10</a></td>
+    <td><a href="../site/europe13.html">Day 13</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
