--- a/site/europe10.html
+++ b/site/europe10.html
@@ -129,7 +129,17 @@ the Basilica, don't you?</p>
 <p>Now it's a just-under three-hour flight to Stockholm, where presumably we will
 eat meatballs and shop for furniture. The snack guy is coming around I NEED
 COFFEE.</p>
-
+<table class="series">
+  <tr><th colspan="6">Europe</th></tr>
+  <tr>
+    <td><a href="../site/europe1.html">Day 1</a></td>
+    <td><a href="../site/europe2.html">Day 2</a></td>
+    <td><a href="../site/europe7.html">Day 7</a></td>
+    <td><a href="../site/europe8.html">Day 8</a></td>
+    <td>Day 10</td>
+    <td><a href="../site/europe13.html">Day 13</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
