--- a/site/europe2.html
+++ b/site/europe2.html
@@ -94,7 +94,17 @@ and then we're LONDON BOUND.</p>
 <em>[2020 note: my God, look at the cock on that one.]</em></p>
 <p>These are the true Icelanders. The humans are kept alive only to act as
 caretakers in their intergalactic communist utopia.</p>
-
+<table class="series">
+  <tr><th colspan="6">Europe</th></tr>
+  <tr>
+    <td><a href="../site/europe1.html">Day 1</a></td>
+    <td>Day 2</td>
+    <td><a href="../site/europe7.html">Day 7</a></td>
+    <td><a href="../site/europe8.html">Day 8</a></td>
+    <td><a href="../site/europe10.html">Day 10</a></td>
+    <td><a href="../site/europe13.html">Day 13</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
