--- a/site/europe7.html
+++ b/site/europe7.html
@@ -84,7 +84,17 @@ observed the Roman god of wine dancing with his panther, as only the Roman god
 of wine can:</p>
 <p><img alt="" src="../site/europe7-11_small.jpg" /></p>
 <p>Vamos a Madrid!</p>
-
+<table class="series">
+  <tr><th colspan="6">Europe</th></tr>
+  <tr>
+    <td><a href="../site/europe1.html">Day 1</a></td>
+    <td><a href="../site/europe2.html">Day 2</a></td>
+    <td>Day 7</td>
+    <td><a href="../site/europe8.html">Day 8</a></td>
+    <td><a href="../site/europe10.html">Day 10</a></td>
+    <td><a href="../site/europe13.html">Day 13</a></td>
+  </tr>
+</table>
 
 <div>
   <table class="navigate">
