--- a/site/europe1.html
+++ b/site/europe1.html
@@ -44,8 +44,8 @@
 <div class="table-of-contents"><ul><li><a href="#europe_day_1">Europe, Day 1</a></li></ul></div>
 
 <h1 id="europe_day_1">Europe, Day 1</h1>
-<p><img alt="" src="../site/vineet_ice_small.jpg" /></p>
-<p>Vineet copes with the low coefficient of friction in Iceland.</p>
+<p><img alt="" src="../site/vineet_ice_small.jpg" />
+<em>Vineet copes with the low coefficient of friction in Iceland.</em></p>
 <p>Morning from the North,</p>
 <p>Vineet and I got in just before midnight Iceland time last night. Immigration
 was about five seconds in and out, and there was no customs. I bought some of
